--- a/run.ipynb
+++ b/run.ipynb
@@ -4,18 +4,31 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3.37 s, sys: 190 ms, total: 3.56 s\n",
+      "Wall time: 2.82 s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
+    "\n",
     "from mosaic import Mosaic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mosaic = Mosaic.from_api('testoo', \"http://localhost:8000/colpali/embed\", binary_quantization=False)"
+    "mosaic = Mosaic.from_api('testoo', \"http://localhost:8000/colqwen2/embed\", binary_quantization=False)\n",
+    "\n",
+    "mosaic.index_file('docs/meetkaggle.pdf', {'title': 'Meet Kaggle', 'author': 'Kaggle'})"
    ]
   },
   {
@@ -24,22 +37,22 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValidationError",
-     "evalue": "1 validation error for ColPaliRequest\ninputs.0\n  Input should be a valid string [type=string_type, input_value={'input_ids': tensor([[  ... 1, 1, 1, 1, 1, 1, 1]])}, input_type=BatchFeature]\n    For further information visit https://errors.pydantic.dev/2.9/v/string_type",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmosaic\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearch\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtestoo\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Projects/mosaic/mosaic/mosaic.py:167\u001b[0m, in \u001b[0;36mMosaic.search\u001b[0;34m(self, query, top_k)\u001b[0m\n\u001b[1;32m    166\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msearch\u001b[39m(\u001b[38;5;28mself\u001b[39m, query: \u001b[38;5;28mstr\u001b[39m, top_k: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m):\n\u001b[0;32m--> 167\u001b[0m     embedding \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minference_client\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode_query\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    169\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mqdrant_client\u001b[38;5;241m.\u001b[39mquery_points(\n\u001b[1;32m    170\u001b[0m         collection_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcollection_name,\n\u001b[1;32m    171\u001b[0m         query\u001b[38;5;241m=\u001b[39membedding[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mfloat()\u001b[38;5;241m.\u001b[39mnumpy()\u001b[38;5;241m.\u001b[39mtolist(),\n\u001b[1;32m    172\u001b[0m         limit\u001b[38;5;241m=\u001b[39mtop_k\n\u001b[1;32m    173\u001b[0m     )\n\u001b[1;32m    175\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpoints\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "File \u001b[0;32m~/Projects/mosaic/mosaic/cloud.py:40\u001b[0m, in \u001b[0;36mCloudInferenceClient.encode_query\u001b[0;34m(self, query)\u001b[0m\n\u001b[1;32m     37\u001b[0m processed_query \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprocessor\u001b[38;5;241m.\u001b[39mprocess_queries([query])\n\u001b[1;32m     39\u001b[0m \u001b[38;5;66;03m# Generate embedding\u001b[39;00m\n\u001b[0;32m---> 40\u001b[0m request \u001b[38;5;241m=\u001b[39m \u001b[43mColPaliRequest\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     41\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mprocessed_query\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[43m    \u001b[49m\u001b[43mimage_input\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     43\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     44\u001b[0m embedding \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mpost(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbase_url, json\u001b[38;5;241m=\u001b[39mrequest\u001b[38;5;241m.\u001b[39mmodel_dump())\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m embedding\n",
-      "File \u001b[0;32m/opt/virtualenvs/colpali_dev_venv/lib/python3.10/site-packages/pydantic/main.py:212\u001b[0m, in \u001b[0;36mBaseModel.__init__\u001b[0;34m(self, **data)\u001b[0m\n\u001b[1;32m    210\u001b[0m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[1;32m    211\u001b[0m __tracebackhide__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m--> 212\u001b[0m validated_self \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    213\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m validated_self:\n\u001b[1;32m    214\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[1;32m    215\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA custom validator is returning a value other than `self`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    216\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReturning anything other than `self` from a top level model validator isn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt supported when validating via `__init__`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    217\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSee the `model_validator` docs (https://docs.pydantic.dev/latest/concepts/validators/#model-validators) for more details.\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m    218\u001b[0m         category\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m    219\u001b[0m     )\n",
-      "\u001b[0;31mValidationError\u001b[0m: 1 validation error for ColPaliRequest\ninputs.0\n  Input should be a valid string [type=string_type, input_value={'input_ids': tensor([[  ... 1, 1, 1, 1, 1, 1, 1]])}, input_type=BatchFeature]\n    For further information visit https://errors.pydantic.dev/2.9/v/string_type"
-     ]
+     "data": {
+      "text/plain": [
+       "[ScoredPoint(id='3d0e8342-a9b4-43d7-85a7-241b421be96b', version=0, score=15.492110181316308, payload={'path': 'docs/meetkaggle.pdf', 'page': 11, 'title': 'Meet Kaggle', 'author': 'Kaggle'}, vector=None, shard_key=None, order_value=None),\n",
+       " ScoredPoint(id='01101ddc-793e-4d0a-a925-bfb2f931cb90', version=0, score=11.69721807515562, payload={'path': 'docs/meetkaggle.pdf', 'page': 9, 'title': 'Meet Kaggle', 'author': 'Kaggle'}, vector=None, shard_key=None, order_value=None),\n",
+       " ScoredPoint(id='f8ffe3d1-4f05-4a37-9be0-4d0d659b5a3c', version=0, score=9.102410784201558, payload={'path': 'docs/meetkaggle.pdf', 'page': 7, 'title': 'Meet Kaggle', 'author': 'Kaggle'}, vector=None, shard_key=None, order_value=None),\n",
+       " ScoredPoint(id='0ba0b5e4-2587-4039-bcfd-7350f9800422', version=0, score=8.888637574387701, payload={'path': 'docs/meetkaggle.pdf', 'page': 8, 'title': 'Meet Kaggle', 'author': 'Kaggle'}, vector=None, shard_key=None, order_value=None),\n",
+       " ScoredPoint(id='ab017582-3659-4cd7-b866-d0f5cf6ccef4', version=0, score=8.4824600509692, payload={'path': 'docs/meetkaggle.pdf', 'page': 3, 'title': 'Meet Kaggle', 'author': 'Kaggle'}, vector=None, shard_key=None, order_value=None)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "mosaic.search('testoo')"
+    "mosaic.search('What are the next steps mentioned?')"
    ]
   },
   {
@@ -73,9 +86,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "colpali_dev_venv",
+   "display_name": ".venv",
    "language": "python",
-   "name": "colpali_dev_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
