revert to threading lock and add extra logging statements

--- a/run.ipynb
+++ b/run.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import antigravity"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -31,38 +22,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mosaic = Mosaic.from_api('test_big_6', \"http://localhost:8000/colqwen2/v1/test_embeddings\", client, binary_quantization=False)"
+    "mosaic = Mosaic.from_api('test_big_11', \"http://172.25.44.10:8000/colqwen2/v1/embeddings\", client, binary_quantization=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking for existing entries: /home/abdullah/Projects/mosaic/docs/meetkaggle.pdf\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Indexing docs/meetkaggle.pdf: 100%|██████████| 12/12 [00:02<00:00,  5.59it/s]\n"
+      "Indexing /home/abdullah/Projects/mosaic/docs/meetkaggle.pdf: 100%|██████████| 12/12 [00:02<00:00,  4.01it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'0d8566c4-f51d-4c3e-bbb2-2454bc7d4b53': '/home/abdullah/Projects/mosaic/docs/meetkaggle.pdf'}"
+       "'0c7cc44a-c559-42e1-a852-f40c4ae48f6e'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mosaic.index_directory('docs', store_img_bs64=False)"
+    "mosaic.index_file('/home/abdullah/Projects/mosaic/docs/meetkaggle.pdf', store_img_bs64=False)"
    ]
   },
   {
